# MAXergy

./: .gitignore  README.md  TASKS.md
backend/: .dockerignore  .env.example  .gitignore  API_DOCUMENTATION.md  DOCKERFILE  README.md  docker-compose.yml  main.py  requirements.txt  start.bat  start.sh
backend/mcp/: .env.example  .gitignore  HANDOFF_model_structure.md  PROMPT.md  README.md  overview_smoke.py  pyproject.toml  railway.toml
backend/mcp/src/maxnergy_mcp/: __init__.py  logging_middleware.py  logging_setup.py  model_engine.py  model_schema.py  models.py  passphrase_auth.py  providers.py  savings.py  server.py  suggestions.py
data/: bdew_h0_profile.json  dwd_climate_normals.json
documentation/app/: ARCHITECTURE.md  PRD.md  PRODUCT.md
documentation/data/: model_input1.json  model_input_1.json  model_output.json  (+3 more)
frontend/: .env.example  MIGRATION_TO_REACT_NATIVE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend-mobile/: .detoxrc.js  .env.example  README.md  app.json  babel.config.js  global.css  jest.config.js  jest.setup.js  package-lock.json  package.json  tsconfig.json
research/: README.md
scripts/: create_app_visualizations.py  create_profile_figures.py  run_baseline_model.py  run_energy_cost_forecast.py  run_model.py  test_contract_schemas.py  test_forecasting_service.py  test_visualization_service.py  visualize_forecasting_accuracy.py
tests/: test_destatis_loader.py  test_energy_cost_forecast.py  test_financing.py  test_price_backtesting.py  test_production.py  test_profile_runs.py  test_upgrade_model.py
(+144 files in other folders)
