[project]
name = "maxnergy-mcp"
version = "0.1.0"
description = "Household energy-transition advisor MCP: address -> roof geometry -> production -> monthly-saving scenarios + upsell"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27",
    "pydantic>=2.7",
]

[project.scripts]
maxnergy-mcp = "maxnergy_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/maxnergy_mcp"]
